use friction calib-v2

--- a/notebooks/test_motors.ipynb
+++ b/notebooks/test_motors.ipynb
@@ -160,7 +160,7 @@
    "source": [
     "# process extracted data\n",
     "print(plot_utils.bcolors.OKBLUE + \"[i] Processing friction data\" + plot_utils.bcolors.ENDC)\n",
-    "#process_friction.move_log()\n",
+    "process_friction.move_log()\n",
     "process_friction.process(yaml_file=config_file, plot_all=False)\n"
    ]
   },
