--- a/notebooks/test_motors.ipynb
+++ b/notebooks/test_motors.ipynb
@@ -65,8 +65,10 @@
     "cmd2 = os.path.expanduser('~/ecat_dev/ec_master_app/build/examples/motor-calib/set-phase/set-phase')\n",
     "# path to ripple-calib to test test ripple and positionl offset\n",
     "cmd3 = os.path.expanduser('~/ecat_dev/ec_master_app/build/examples/motor-calib/ripple-calib/ripple-calib')\n",
-    "# path to friction-calib for inertia and friction identification\n",
+    "# path to friction-calib for friction identification\n",
     "cmd4 = os.path.expanduser('~/ecat_dev/ec_master_app/build/examples/motor-calib/friction-calib/friction-calib')\n",
+    "# path to inertia-calib for inertia identification\n",
+    "cmd5 = os.path.expanduser('~/ecat_dev/ec_master_app/build/examples/motor-calib/inertia-calib/inertia-calib')\n",
     "# path to the configuration file for the motor and the test variables\n",
     "config_file = os.path.expanduser('~/ecat_dev/ec_master_app/examples/motor-calib/config.yaml')\n",
     "\n",
@@ -105,8 +107,7 @@
     "\n",
     "# process extracted data\n",
     "print(plot_utils.bcolors.OKBLUE + \"[i] Processing phase data\" + plot_utils.bcolors.ENDC)\n",
-    "config_file = process_phase.process(yaml_file=config_file, plot_all=False)\n",
-    "\n"
+    "config_file = process_phase.process(yaml_file=config_file, plot_all=False)"
    ]
   },
   {
@@ -136,7 +137,7 @@
     "\n",
     "# process extracted data\n",
     "print(plot_utils.bcolors.OKBLUE + \"[i] Processing ripple data\" + plot_utils.bcolors.ENDC)\n",
-    "config_file = process_ripple.process(yaml_file=config_file, plot_all=False)\n"
+    "config_file = process_ripple.process(yaml_file=config_file, plot_all=False)"
    ]
   },
   {
@@ -145,11 +146,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Inertia and friction identification\n",
+    "## Friction identification\n",
     "print(plot_utils.bcolors.OKBLUE + \"[i] Starting friction-calib\" + plot_utils.bcolors.ENDC)\n",
     "if os.system(cmd4 + ' ' + config_file):\n",
     "    sys.exit(plot_utils.bcolors.FAIL + u'[\\u2717] Error during friction-calib' + plot_utils.bcolors.ENDC)\n",
-    "print(plot_utils.bcolors.OKBLUE + \"[i] Ended friction-calib successfully\" + plot_utils.bcolors.ENDC)\n"
+    "print(plot_utils.bcolors.OKBLUE + \"[i] Ended friction-calib successfully\" + plot_utils.bcolors.ENDC)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Inertia identification\n",
+    "print(plot_utils.bcolors.OKBLUE + \"[i] Starting inertia-calib\" + plot_utils.bcolors.ENDC)\n",
+    "if os.system(cmd5 + ' ' + config_file):\n",
+    "    sys.exit(plot_utils.bcolors.FAIL + u'[\\u2717] Error during inertia-calib' + plot_utils.bcolors.ENDC)\n",
+    "print(plot_utils.bcolors.OKBLUE + \"[i] Ended inertia-calib successfully\" + plot_utils.bcolors.ENDC)\n",
+    "process_friction.move_log()"
    ]
   },
   {
@@ -159,9 +174,8 @@
    "outputs": [],
    "source": [
     "# process extracted data\n",
-    "print(plot_utils.bcolors.OKBLUE + \"[i] Processing friction data\" + plot_utils.bcolors.ENDC)\n",
-    "process_friction.move_log()\n",
-    "process_friction.process(yaml_file=config_file, plot_all=False)\n"
+    "print(plot_utils.bcolors.OKBLUE + \"[i] Processing friction and inertia data\" + plot_utils.bcolors.ENDC)\n",
+    "process_friction.process(yaml_file=config_file, plot_all=False)"
    ]
   },
   {
