added new process_friction

--- a/notebooks/test_motors.ipynb
+++ b/notebooks/test_motors.ipynb
@@ -14,7 +14,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "Python 3.6.9 64-bit",
+   "name": "python3",
    "display_name": "Python 3.6.9 64-bit",
    "metadata": {
     "interpreter": {
@@ -44,10 +44,11 @@
     "\n",
     "#import costum files\n",
     "sys.path.append('/home/tree/ecat_dev/motor_calibration')\n",
-    "import process_phase\n",
-    "import process_ripple\n",
-    "import process_friction\n",
-    "import plot_utils"
+    "from utils import process_phase\n",
+    "from utils import process_ripple\n",
+    "from utils import process_friction\n",
+    "from utils import plot_utils\n",
+    "from utils import move_utils"
    ]
   },
   {
@@ -163,8 +164,8 @@
     "print(plot_utils.bcolors.OKBLUE + \"[i] Starting inertia-calib\" + plot_utils.bcolors.ENDC)\n",
     "if os.system(cmd5 + ' ' + config_file):\n",
     "    sys.exit(plot_utils.bcolors.FAIL + u'[\\u2717] Error during inertia-calib' + plot_utils.bcolors.ENDC)\n",
-    "print(plot_utils.bcolors.OKBLUE + \"[i] Ended inertia-calib successfully\" + plot_utils.bcolors.ENDC)\n",
-    "process_friction.move_log()"
+    "move_utils.move_log(yaml_file=config_file)\n",
+    "print(plot_utils.bcolors.OKBLUE + \"[i] Ended inertia-calib successfully\" + plot_utils.bcolors.ENDC)"
    ]
   },
   {
@@ -175,7 +176,7 @@
    "source": [
     "# process extracted data\n",
     "print(plot_utils.bcolors.OKBLUE + \"[i] Processing friction and inertia data\" + plot_utils.bcolors.ENDC)\n",
-    "process_friction.process(yaml_file=config_file, plot_all=False)"
+    "process_friction.process(yaml_file=config_file, plot_all=False))"
    ]
   },
   {
