--- a/notebooks/test_motors.ipynb
+++ b/notebooks/test_motors.ipynb
@@ -176,7 +176,7 @@
    "source": [
     "# process extracted data\n",
     "print(plot_utils.bcolors.OKBLUE + \"[i] Processing friction and inertia data\" + plot_utils.bcolors.ENDC)\n",
-    "process_friction.process(yaml_file=config_file, plot_all=False))"
+    "process_friction.process(yaml_file=config_file, plot_all=False)"
    ]
   },
   {
