✨ feat(torque-calib): added process_torque.py

--- a/notebooks/test_motors.ipynb
+++ b/notebooks/test_motors.ipynb
@@ -10,16 +10,16 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9-final"
+   "version": "3.6.9"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.6.9 64-bit",
-   "metadata": {
-    "interpreter": {
-     "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
-    }
+   "name": "python369jvsc74a57bd031f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6",
+   "display_name": "Python 3.6.9 64-bit"
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
@@ -45,6 +45,7 @@
     "#import costum files\n",
     "sys.path.append('/home/tree/ecat_dev/motor_calibration')\n",
     "from utils import process_phase\n",
+    "from utils import process_torque\n",
     "from utils import process_ripple\n",
     "from utils import process_friction\n",
     "from utils import plot_utils\n",
@@ -65,17 +66,26 @@
     "# path to set-phase to set the optimized value to the motor\n",
     "cmd2 = os.path.expanduser('~/ecat_dev/ec_master_app/build/examples/motor-calib/set-phase/set-phase')\n",
     "# path to ripple-calib to test test ripple and positionl offset\n",
-    "cmd3 = os.path.expanduser('~/ecat_dev/ec_master_app/build/examples/motor-calib/ripple-calib/ripple-calib')\n",
+    "cmd3 = os.path.expanduser('~/ecat_dev/ec_master_app/build/examples/motor-calib/torque-calib/torque-calib')\n",
+    "# path to ripple-calib to test test ripple and positionl offset\n",
+    "cmd4 = os.path.expanduser('~/ecat_dev/ec_master_app/build/examples/motor-calib/ripple-calib/ripple-calib')\n",
     "# path to friction-calib for friction identification\n",
-    "cmd4 = os.path.expanduser('~/ecat_dev/ec_master_app/build/examples/motor-calib/friction-calib/friction-calib')\n",
+    "cmd5 = os.path.expanduser('~/ecat_dev/ec_master_app/build/examples/motor-calib/friction-calib/friction-calib')\n",
     "# path to inertia-calib for inertia identification\n",
-    "cmd5 = os.path.expanduser('~/ecat_dev/ec_master_app/build/examples/motor-calib/inertia-calib/inertia-calib')\n",
+    "cmd6 = os.path.expanduser('~/ecat_dev/ec_master_app/build/examples/motor-calib/inertia-calib/inertia-calib')\n",
     "# path to the configuration file for the motor and the test variables\n",
     "config_file = os.path.expanduser('~/ecat_dev/ec_master_app/examples/motor-calib/config.yaml')\n",
     "\n",
     "#print logo\n",
     "plot_utils.print_alberobotics()"
    ]
+  },
+  {
+   "source": [
+    "# Test PDO"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -95,6 +105,13 @@
    ]
   },
   {
+   "source": [
+    "# Phase calib"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -105,7 +122,6 @@
     "if os.system(cmd1 + ' ' + config_file):\n",
     "    sys.exit(plot_utils.bcolors.FAIL + u'[\\u2717] Error during phase-calib' + plot_utils.bcolors.ENDC)\n",
     "print(plot_utils.bcolors.OKBLUE + \"[i] Ended phase-calib successfully\" + plot_utils.bcolors.ENDC)\n",
-    "\n",
     "# process extracted data\n",
     "print(plot_utils.bcolors.OKBLUE + \"[i] Processing phase data\" + plot_utils.bcolors.ENDC)\n",
     "config_file = process_phase.process(yaml_file=config_file, plot_all=False)"
@@ -125,6 +141,47 @@
    ]
   },
   {
+   "source": [
+    "# Torque calib"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config_file ='/logs/AOR02-EOR02-H3236AOR02-EOR02-H3236-20210422164843-results.yaml'\n",
+    "## test ripple and position dependant torque\n",
+    "print(plot_utils.bcolors.OKBLUE + \"[i] Starting torque-calib\" + plot_utils.bcolors.ENDC)\n",
+    "if os.system(cmd3 + ' ' + config_file):\n",
+    "    sys.exit(plot_utils.bcolors.FAIL + u'[\\u2717] Error during torque-calib' + plot_utils.bcolors.ENDC)\n",
+    "print(plot_utils.bcolors.OKBLUE + \"[i] Ended torque-calib successfully\" + plot_utils.bcolors.ENDC)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config_file ='/logs/AOR02-EOR02-H3236AOR02-EOR02-H3236-20210422164843-results.yaml'\n",
+    "# process extracted data\n",
+    "print(plot_utils.bcolors.OKBLUE + \"[i] Processing torque data\" + plot_utils.bcolors.ENDC)\n",
+    "config_file = process_torque.process(yaml_file=config_file, plot_all=False)"
+   ]
+  },
+  {
+   "source": [
+    "# Ripple calib"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -132,7 +189,7 @@
    "source": [
     "## test ripple and position dependant torque\n",
     "print(plot_utils.bcolors.OKBLUE + \"[i] Starting ripple-calib\" + plot_utils.bcolors.ENDC)\n",
-    "if os.system(cmd3 + ' ' + config_file):\n",
+    "if os.system(cmd4 + ' ' + config_file):\n",
     "    sys.exit(plot_utils.bcolors.FAIL + u'[\\u2717] Error during ripple-calib' + plot_utils.bcolors.ENDC)\n",
     "print(plot_utils.bcolors.OKBLUE + \"[i] Ended ripple-calib successfully\" + plot_utils.bcolors.ENDC)\n",
     "\n",
@@ -142,17 +199,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "source": [
+    "# Friction and Inertia identification"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "source": [
     "## Friction identification\n",
     "print(plot_utils.bcolors.OKBLUE + \"[i] Starting friction-calib\" + plot_utils.bcolors.ENDC)\n",
-    "if os.system(cmd4 + ' ' + config_file):\n",
+    "if os.system(cmd5 + ' ' + config_file):\n",
     "    sys.exit(plot_utils.bcolors.FAIL + u'[\\u2717] Error during friction-calib' + plot_utils.bcolors.ENDC)\n",
     "print(plot_utils.bcolors.OKBLUE + \"[i] Ended friction-calib successfully\" + plot_utils.bcolors.ENDC)"
-   ]
+   ],
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
@@ -162,7 +226,7 @@
    "source": [
     "## Inertia identification\n",
     "print(plot_utils.bcolors.OKBLUE + \"[i] Starting inertia-calib\" + plot_utils.bcolors.ENDC)\n",
-    "if os.system(cmd5 + ' ' + config_file):\n",
+    "if os.system(cmd6 + ' ' + config_file):\n",
     "    sys.exit(plot_utils.bcolors.FAIL + u'[\\u2717] Error during inertia-calib' + plot_utils.bcolors.ENDC)\n",
     "move_utils.move_log(yaml_file=config_file)\n",
     "print(plot_utils.bcolors.OKBLUE + \"[i] Ended inertia-calib successfully\" + plot_utils.bcolors.ENDC)"
