✨ feat(freq-calib): add scheleton for freq-calib to main script

--- a/notebooks/test_motors.ipynb
+++ b/notebooks/test_motors.ipynb
@@ -201,6 +201,7 @@
    },
    "outputs": [],
    "source": [
+    "config_file ='/logs/AOR02-EOR02-H3236AOR02-EOR02-H3236-20210422164843-results.yaml'\n",
     "# process extracted data\n",
     "print(plot_utils.bcolors.OKBLUE + \"[i] Processing torque data\" + plot_utils.bcolors.ENDC)\n",
     "config_file = process_torque.process(yaml_file=config_file, plot_all=False)"
@@ -306,6 +307,45 @@
     "# process extracted data\n",
     "print(plot_utils.bcolors.OKBLUE + \"[i] Processing friction and inertia data\" + plot_utils.bcolors.ENDC)\n",
     "process_friction.process(yaml_file=config_file, plot_all=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ## TODO: Frequency response calibration\n",
+    "# # prompt user to fully lock the motor before continuing\n",
+    "# print(\"For frequency response calibration, the motor must be fully locked\")\n",
+    "# while not prompt_user(\"\"\"Before continuing make sure the motor's output flange is properly locked.\n",
+    "# Continue?\"\"\"):\n",
+    "#     pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # TODO: run test\n",
+    "# print(plot_utils.bcolors.OKBLUE + \"[i] Starting frequency-calib\" + plot_utils.bcolors.ENDC)\n",
+    "# if os.system(cmd5 + ' ' + config_file):\n",
+    "#     sys.exit(plot_utils.bcolors.FAIL + u'[\\u2717] Error during frequency-calib' + plot_utils.bcolors.ENDC)\n",
+    "# move_utils.move_log(yaml_file=config_file)\n",
+    "# print(plot_utils.bcolors.OKBLUE + \"[i] Ended frequency-calib successfully\" + plot_utils.bcolors.ENDC)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # TODO: process extracted data\n",
+    "# print(plot_utils.bcolors.OKBLUE + \"[i] Processing frequency response data\" + plot_utils.bcolors.ENDC)\n",
+    "# process_friction.process(yaml_file=config_file, plot_all=False)"
    ]
   },
   {
