--- a/notebooks/test_motors.ipynb
+++ b/notebooks/test_motors.ipynb
@@ -111,7 +111,7 @@
    "outputs": [],
    "source": [
     "#get updated yaml file\n",
-    "list_of_files = glob.glob('/logs/*.yaml')\n",
+    "list_of_files = glob.glob('/logs/**/*_results.yaml', recursive=True)\n",
     "config_file = max(list_of_files, key=os.path.getctime)"
    ]
   },
@@ -201,7 +201,7 @@
    },
    "outputs": [],
    "source": [
-    "config_file ='/logs/AOR02-EOR02-H3236AOR02-EOR02-H3236-20210422164843-results.yaml'\n",
+    "config_file ='/logs/AOR02-EOR02-H3236/2021-04-22--16-48-43/AOR02-EOR02-H3236_2021-04-22--16-48-43_results.yaml'\n",
     "# process extracted data\n",
     "print(plot_utils.bcolors.OKBLUE + \"[i] Processing torque data\" + plot_utils.bcolors.ENDC)\n",
     "config_file = process_torque.process(yaml_file=config_file, plot_all=False)"
