✨ feat(torque-calib): add set-torque

--- a/notebooks/test_motors.ipynb
+++ b/notebooks/test_motors.ipynb
@@ -69,7 +69,7 @@
     "# path to ripple-calib to test test ripple and positionl offset\n",
     "cmd2 = os.path.expanduser('~/ecat_dev/ec_master_app/build/examples/motor-calib/torque-calib/torque-calib')\n",
     "# path to set-phase to set the optimized value to the motor\n",
-    "cmd2b = os.path.expanduser('~/ecat_dev/ec_master_app/build/examples/motor-calib/set-phase/set-phase')\n",
+    "cmd2b = os.path.expanduser('~/ecat_dev/ec_master_app/build/examples/motor-calib/set-torque/set-torque')\n",
     "# path to ripple-calib to test test ripple and positionl offset\n",
     "cmd3 = os.path.expanduser('~/ecat_dev/ec_master_app/build/examples/motor-calib/ripple-calib/ripple-calib')\n",
     "# path to friction-calib for friction identification\n",
@@ -112,7 +112,8 @@
    "source": [
     "#get updated yaml file\n",
     "list_of_files = glob.glob('/logs/**/*_results.yaml', recursive=True)\n",
-    "config_file = max(list_of_files, key=os.path.getctime)"
+    "config_file = max(list_of_files, key=os.path.getctime)\n",
+    "print(config_file)"
    ]
   },
   {
@@ -186,6 +187,7 @@
    "outputs": [],
    "source": [
     "## test ripple and position dependant torque\n",
+    "config_file ='/logs/AOR03-EOR03-H5236/2021-05-04--10-06-49/AOR03-EOR03-H5236_2021-05-04--10-06-49_results.yaml'\n",
     "print(plot_utils.bcolors.OKBLUE + \"[i] Starting torque-calib\" + plot_utils.bcolors.ENDC)\n",
     "if os.system(cmd2 + ' ' + config_file):\n",
     "    sys.exit(plot_utils.bcolors.FAIL + u'[\\u2717] Error during torque-calib' + plot_utils.bcolors.ENDC)\n",
@@ -201,7 +203,7 @@
    },
    "outputs": [],
    "source": [
-    "config_file ='/logs/AOR02-EOR02-H3236/2021-04-22--16-48-43/AOR02-EOR02-H3236_2021-04-22--16-48-43_results.yaml'\n",
+    "config_file ='/logs/AOR03-EOR03-H5236/2021-05-04--10-06-49/AOR03-EOR03-H5236_2021-05-04--10-06-49_results.yaml'\n",
     "# process extracted data\n",
     "print(plot_utils.bcolors.OKBLUE + \"[i] Processing torque data\" + plot_utils.bcolors.ENDC)\n",
     "config_file = process_torque.process(yaml_file=config_file, plot_all=False)"
@@ -213,11 +215,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Upload to motor the updated torsion bar stiffness and torque constant\n",
-    "# print(plot_utils.bcolors.OKBLUE + \"[i] Sending torsion bar stiffness and torque constant to motor using set-torque\" +  plot_utils.bcolors.ENDC)\n",
-    "# if os.system(cmd2b + ' ' + config_file):\n",
-    "#     sys.exit(plot_utils.bcolors.FAIL + u'[\\u2717] Error during set-torque' + plot_utils.bcolors.ENDC)\n",
-    "# print(plot_utils.bcolors.OKBLUE + \"[i] Ended set-torque successfully\" + plot_utils.bcolors.ENDC)\n"
+    "# Upload to motor the updated torsion bar stiffness (and torque constant?)\n",
+    "config_file ='/logs/AOR03-EOR03-H5236/2021-05-04--10-06-49/AOR03-EOR03-H5236_2021-05-04--10-06-49_results.yaml'\n",
+    "print(plot_utils.bcolors.OKBLUE + \"[i] Sending torsion bar stiffness to motor using set-torque\" +  plot_utils.bcolors.ENDC)\n",
+    "if os.system(cmd2b + ' ' + config_file):\n",
+    "    sys.exit(plot_utils.bcolors.FAIL + u'[\\u2717] Error during set-torque' + plot_utils.bcolors.ENDC)\n",
+    "print(plot_utils.bcolors.OKBLUE + \"[i] Ended set-torque successfully\" + plot_utils.bcolors.ENDC)\n"
    ]
   },
   {
